# mozilla-unified

devtools/: moz.build
devtools/cdp/: Cargo.toml  PCdpRemotePageTools.ipdl  moz.build
devtools/cdp/content/: Cargo.toml  CdpRemotePageToolsChild.cpp  CdpRemotePageToolsChild.h  lib.rs  moz.build  page_tools.rs  remote.rs
devtools/cdp/parent/: Cargo.toml  CdpParentBridge.cpp  CdpParentRemote.cpp  CdpParentRemote.h  CdpRemotePageToolsParent.cpp  CdpRemotePageToolsParent.h  bridge.rs  lib.rs  mod.rs  moz.build
devtools/cdp/parent/remote/: greeter.rs  mod.rs  targets.rs
dom/ipc/: ContentProcessManager.cpp  ContentProcessManager.h  PBrowser.ipdl  TabChild.cpp  TabChild.h  TabParent.cpp  TabParent.h  moz.build
toolkit/xre/: moz.build  nsAppRunner.cpp
