[package]
name = "gecko-cdp-parent"
version = "0.0.0"
authors = ["Michael Smith <michael@spinda.net>"]
license = "MPL-2.0"
description = """
Parent process-side Chrome DevTools Protocol implementation for Gecko
"""

[lib]
name = "gecko_cdp_parent"
path = "lib.rs"

[dependencies]
futures = "0.1.15"
log = "0.3.6"
nom = "3.2.1"
tokio-core = "0.1.9"
tokio-io = "0.1.3"
tokio-service = "0.1.0"

[dependencies.cdp]
git = "https://github.com/devtools-html/rust-cdp"
rev = "535c6e058bb79a2ba5581b1ae5784c5d9eb93394"

[dependencies.tokio-cdp]
git = "https://github.com/devtools-html/rust-cdp"
rev = "535c6e058bb79a2ba5581b1ae5784c5d9eb93394"

[dependencies.nserror]
path = "../../../xpcom/rust/nserror"

[dependencies.nsstring]
path = "../../../xpcom/rust/nsstring"

[dependencies.websocket]
version = "0.20.2"
default-features = false
features = ["async"]
